--- a/src/app/interview/interview.component.html
+++ b/src/app/interview/interview.component.html
@@ -1,5 +1,4 @@
-<!-- <app-interview></app-interview> -->
-<header>
+<!-- <header>
     <nav>
       <ul>
        <li><a routerLink="home">Home</a></li>
@@ -8,8 +7,4 @@
       </ul>
     </nav>
   </header>
-  <app-home></app-home>
-<app-interview></app-interview>
-<div><router-outlet></router-outlet></div>
-
-  
+  <app-home></app-home> -->
